@@ -1,22 +1,0 @@
-﻿
-
-.. ==================================================
-.. FOR YOUR INFORMATION
-.. --------------------------------------------------
-.. -*- coding: utf-8 -*- with BOM.
-
-.. ==================================================
-.. DEFINE SOME TEXTROLES
-.. --------------------------------------------------
-.. role::   underline
-.. role::   typoscript(code)
-.. role::   ts(typoscript)
-   :class:  typoscript
-.. role::   php(code)
-
-
-Getting the extension from GIT
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-The extension is hosted on the TYPO3 GIT repository:
-git://git.typo3.org/TYPO3CMS/Extensions/oelib.git
